header-subtitle z-index fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@
   position: absolute;
   bottom: 30px;
   left: 64px;
+  z-index: 2;
 }
 
 .header__subtitle-text {
